fixed align for most common key when there is a sharp/flat

--- a/Wrapped/static/Wrapped/view_wrap.css
+++ b/Wrapped/static/Wrapped/view_wrap.css
@@ -119,6 +119,7 @@
 .genre_list {
     font-size: large;
     display: flex;
+    align-items: baseline;
 }
 
 .genre_container progress {
